# Gmail-Sentiment-Analyzer

./: .gitignore  ACCEPTANCE.md  CHANGELOG.md  LICENSE  MANIFEST.in  PRIVACY.md  README.md  SECURITY.md  SYSTEMD-gsa.service  gmail_poll.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: release.yml
